--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -691,11 +691,11 @@ display: none;
     padding: 10px 20px !important;
     border-radius: 8px;
 }
-.navbar-toggler-icon {
+/* .navbar-toggler-icon {
 
     filter: invert(100%) sepia(16%) saturate(7463%) hue-rotate(222deg) brightness(119%) contrast(115%);
 
-}
+} */
 @media (min-width:900px) {
     
 .services-other .card-body p{
