--- a/assets/css/style-system.css
+++ b/assets/css/style-system.css
@@ -177,7 +177,7 @@ background-size: cover;
   background-color: #fff;
   display: grid; 
     align-content: flex-start;
-    grid-template-rows: 0.25fr 0.25fr 1fr;
+    grid-template-rows: 0.25fr 1fr 0.25fr;
     transition: all 0.3s ease-in-out; /* لإضافة تأثير الانتقال */
 }
 .price_box_inner:hover {
@@ -295,3 +295,36 @@ width: 100%;
  
     height: 100%;
  }
+ /* تصميم الحاوية */
+.switcher {
+    display: inline-flex;
+    border: 2px solid #ccc;
+    border-radius: 16px;
+    overflow: hidden;
+    padding: 8px 10px;
+    background-color: #fff;
+  }
+  
+  /* تصميم الأزرار */
+  .switcher .btn {
+    flex: 1;
+    padding: 6px 27px;
+    font-size: 16px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    transition: background-color 0.3s ease, color 0.3s ease;
+  }
+  
+  /* تصميم الزر غير النشط */
+  .switcher .btn:not(.active) {
+    background-color: transparent;
+    color: #000;
+  }
+  
+  /* تصميم الزر النشط */
+  .switcher .btn.active {
+    background: linear-gradient(100deg, #0B555E, #428315cc);
+    color: #fff;
+    border-radius: 10px;
+  }
