--- a/assets/css/style-system.css
+++ b/assets/css/style-system.css
@@ -11,7 +11,9 @@
  }
  .p-decerption {
      font-size: 16px;
-     line-height: 26px;
+     line-height: 29px;
+ 
+
      font-weight: 400;
      color: #605f5f;
      margin-bottom: 0px;
@@ -118,11 +120,10 @@ font-size: 33px;
     width: 48px;
     height: 48px;
 }
-.component-video video {
+.video-date-about video{
     width: 100%;
-    height: 600px;
-    border-radius: 0px;
-    box-shadow: 0px 2px 16px #605f5f66;
+  
+  
 }
 .component-reviews {
 
@@ -328,3 +329,40 @@ width: 100%;
     color: #fff;
     border-radius: 10px;
   }
+  .image-box {
+    position: relative;
+}
+.image-box .image {
+    position: relative;
+    display: block;
+    border-radius: 30px 30px 0 0;
+   
+    max-width: 470px;
+    transition: all .5s ease;
+}
+@media (max-width:600px) {
+    .image-box .image {
+margin: 0px;
+    }
+}
+.image-box .image img{
+width: 100%;
+}
+.image-box .text {
+    position: absolute;
+    left: 0;
+    bottom: 26px;
+    width: 200px;
+    padding: 30px 15px 29px;
+    box-shadow: 0 20px 60px 10px rgba(0, 0, 0, .1);
+    border-radius: 20px;
+    z-index: 1;
+    background: linear-gradient(100deg, #0B555E, #428315cc);
+    color: #fff;
+}
+.btn-modal {
+    background-color: #fff;
+    border: 0px;
+}
+
+   
