--- a/assets/css/style-system.css
+++ b/assets/css/style-system.css
@@ -435,15 +435,14 @@ width: 100%;
   .steps-container .step:not(:last-child)::before {
     content: '';
     position: absolute;
-    top: 45%;
-    right: 87%;
-    width: 86%;
-    height: 2px;
-    background: transparent;
-    border-top: 2px dashed #ccc;
-    transform: translateY(-50%);
-    background: linear-gradient(to right, transparent 0%, #ccc 50%, transparent 100%);
-    transform: translateY(-50%) rotate(346deg); /* Adjust rotation to create curve effect */
-    z-index: -1;
-  }
+    top: 46%;
+    left: -127px;
+    width: 174px;
+    height: 54px;
+    background: url(../Asset-system/line.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    transform: translateY(-50%) rotate(346deg);
+}
+
  
