--- a/assets/css/style-system.css
+++ b/assets/css/style-system.css
@@ -432,17 +432,26 @@ width: 100%;
     background-color: #6dd12a; /* Lime Green */
   }
   /* Line between steps */
-  .steps-container .step:not(:last-child)::before {
-    content: '';
-    position: absolute;
-    top: 46%;
-    left: -127px;
-    width: 174px;
-    height: 54px;
-    background: url(../Asset-system/line.png);
-    background-size: contain;
-    background-repeat: no-repeat;
-    transform: translateY(-50%) rotate(346deg);
+  @media (min-width:768px) {
+    .steps-container .step:not(:last-child)::before {
+        content: '';
+        position: absolute;
+        top: 46%;
+        left: -136px;
+        width: 174px;
+        height: 54px;
+        background: url(../Asset-system/line.png);
+        background-size: contain;
+        background-repeat: no-repeat;
+        transform: translateY(-50%) rotate(346deg);
+    }
+  }
+
+@media (max-width:600px) {
+    .steps-container {
+        flex-wrap: wrap;
+
+    }
 }
 
  
