--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1391,3 +1391,66 @@ height: 270px;
   }
   
 }
+.compoent-price-hadder {
+    position: fixed;
+    Z-INDEX: 100;
+    bottom:13%;
+}
+[dir="rtl"] .compoent-price-hadder {
+    right: 1%;
+    text-align: left;
+}
+.back {
+    position: absolute;
+
+}
+
+.btn-btn {
+  background: linear-gradient(100deg, #0B555E, #428315cc);
+    color: #fff;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 0px;
+    border: 0px;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    z-index: 1;
+}
+.compoent-price-hadder .dropdown-menu {
+  background-color: #ffffff;
+  
+    z-index: 112;
+    margin-top: 10px;
+    padding: 10px;
+    box-shadow: 0px 5px 10px #00000047;
+
+}
+.dropdown-content h6{
+color: #6C727D;
+font-size: 18px;
+font-weight: 600;
+
+}
+.dropdown-content ul{
+  margin-top: 1rem;
+    border-top: 1px solid #b6b6b6;
+    padding-top: 5px;
+    padding-right: 19px; 
+}
+.dropdown-content ul li{
+  margin-bottom: 10px;
+  list-style-type: circle;
+}
+.dropdown-content ul li a{
+ font-size: 16px;
+ color: #6C727D;
+ font-weight: 500;
+
+}
+.dropdown-content ul li:focus, .dropdown-content ul li:hover {
+    color: var(--bs-dropdown-link-hover-color);
+    background-color: var(--bs-dropdown-link-hover-bg);
+}
